@@ -15,7 +15,7 @@
                     <div class="image-text"><h2>MK-DlR</h2></div>
                 </div>
                 <div class="about-text">
-                    <h2>About</h2>
+                    <h2 style="color:black">About</h2>
                     <p>When I first began learning coding, the make directory command sounded funny to me, so now I go by MK-DlR (lowercase l). I'm a student of The Odin Project with a focus on JavaScript. As is obvious from many of my projects, I particularly enjoy SEGA's Yakuza/Like A Dragon series and much of my work features gifs and images from it. The character typically seen in my codes and READMEs is Majima Gorō.</p>
                     <p class="about-icon-container">
                         <a href="https://ca.linkedin.com/"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" class="about-icons" /></a>
@@ -34,7 +34,7 @@
                         <h3>Battleship</h3>
                         <div class="project-icon-container">
                             <a href="https://github.com/MK-DlR/battleship-project"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
-                            <a href="https://mk-dlr.github.io/battleship-project/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
+                            <a href="https://mk-dlr.github.io/battleship-project/" target="_blank"><img src="./icons/open-in-new.svg" class="project-icons"></a>
                         </div>
                     </div>
                     <p class="project-desc">A Milton Bradley style Battleship game, playable against the computer or another human player.</p>
@@ -47,7 +47,7 @@
                         <h3>To Do List</h3>
                         <div class="project-icon-container">
                             <a href="https://github.com/MK-DlR/todo-list"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
-                            <a href="https://mk-dlr.github.io/todo-list/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
+                            <a href="https://mk-dlr.github.io/todo-list/" target="_blank"><img src="./icons/open-in-new.svg" class="project-icons"></a>
                         </div>
                     </div>
                     <p class="project-desc">A fully functional to do list with local storage and user and display customization features.</p>
@@ -60,7 +60,7 @@
                         <h3>Library</h3>
                         <div class="project-icon-container">
                             <a href="https://github.com/MK-DlR/library"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
-                            <a href="https://mk-dlr.github.io/library/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
+                            <a href="https://mk-dlr.github.io/library/" target="_blank"><img src="./icons/open-in-new.svg" class="project-icons"></a>
                         </div>
                     </div>
                     <p class="project-desc">A library storage project for tracking book information and read status, able to display info and images.</p>
@@ -73,7 +73,7 @@
                         <h3>Restaurant Page</h3>
                         <div class="project-icon-container">
                             <a href="https://github.com/MK-DlR/resto-page"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
-                            <a href="https://mk-dlr.github.io/resto-page/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
+                            <a href="https://mk-dlr.github.io/resto-page/" target="_blank"><img src="./icons/open-in-new.svg" class="project-icons"></a>
                         </div>
                     </div>
                     <p class="project-desc">A mock restaurant page for a fictional restaurant made using modules and featuring tabs.</p>
@@ -86,7 +86,7 @@
                         <h3>Calculator</h3>
                         <div class="project-icon-container">
                             <a href="https://github.com/MK-DlR/calculator"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
-                            <a href="https://mk-dlr.github.io/calculator/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
+                            <a href="https://mk-dlr.github.io/calculator/" target="_blank"><img src="./icons/open-in-new.svg" class="project-icons"></a>
                         </div>
                     </div>
                     <p class="project-desc">A fully functional digital calculator with clear, backspace, and decimal point capabilities.</p>
@@ -99,7 +99,7 @@
                         <h3>Weather App</h3>
                         <div class="project-icon-container">
                             <a href="https://github.com/MK-DlR/weather-app"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
-                            <a href="https://mk-dlr.github.io/weather-app/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
+                            <a href="https://mk-dlr.github.io/weather-app/" target="_blank"><img src="./icons/open-in-new.svg" class="project-icons"></a>
                         </div>
                     </div>
                     <p class="project-desc">A page for searching in various locations, with different images based on returned weather.</p>
@@ -112,7 +112,7 @@
                         <h3>Admin Dashboard</h3>
                         <div class="project-icon-container">
                             <a href="https://github.com/MK-DlR/admin-dashboard"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
-                            <a href="https://mk-dlr.github.io/admin-dashboard/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
+                            <a href="https://mk-dlr.github.io/admin-dashboard/" target="_blank"><img src="./icons/open-in-new.svg" class="project-icons"></a>
                         </div>
                     </div>
                     <p class="project-desc">An admin dashboard based off of a provided image, with header, sidebar, and individual cards.</p>
@@ -125,7 +125,7 @@
                         <h3>Sign Up Form</h3>
                         <div class="project-icon-container">
                             <a href="https://github.com/MK-DlR/signup-form"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
-                            <a href="https://mk-dlr.github.io/signup-form/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
+                            <a href="https://mk-dlr.github.io/signup-form/" target="_blank"><img src="./icons/open-in-new.svg" class="project-icons"></a>
                         </div>
                     </div>
                     <p class="project-desc">A sign up form based off of a provided image, with built in input validity checks.</p>
@@ -138,7 +138,7 @@
                         <h3>Landing Page</h3>
                         <div class="project-icon-container">
                             <a href="https://github.com/MK-DlR/landing-page"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
-                            <a href="https://mk-dlr.github.io/landing-page/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
+                            <a href="https://mk-dlr.github.io/landing-page/" target="_blank"><img src="./icons/open-in-new.svg" class="project-icons"></a>
                         </div>
                     </div>
                     <p class="project-desc">A basic landing page based off of a provided image, with different anchor links.</p>
@@ -151,7 +151,7 @@
                         <h3>Tic-Tac-Toe</h3>
                         <div class="project-icon-container">
                             <a href="https://github.com/MK-DlR/tttgame"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
-                            <a href="https://mk-dlr.github.io/tttgame/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
+                            <a href="https://mk-dlr.github.io/tttgame/" target="_blank"><img src="./icons/open-in-new.svg" class="project-icons"></a>
                         </div>
                     </div>
                     <p class="project-desc">A tic-tac-toe game playable between two human players with score tracking.</p>
@@ -164,7 +164,7 @@
                         <h3>Etch-A-Sketch</h3>
                         <div class="project-icon-container">
                             <a href="https://github.com/MK-DlR/etchasketch"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
-                            <a href="https://mk-dlr.github.io/etchasketch/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
+                            <a href="https://mk-dlr.github.io/etchasketch/" target="_blank"><img src="./icons/open-in-new.svg" class="project-icons"></a>
                         </div>
                     </div>
                     <p class="project-desc">A digital Etch-A-Sketch with randomized "drawing" colors and customizable grid size.</p>
@@ -177,7 +177,7 @@
                         <h3>Image Carousel</h3>
                         <div class="project-icon-container">
                             <a href="https://github.com/MK-DlR/image-carousel"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="project-icons" /></a>
-                            <a href="https://mk-dlr.github.io/image-carousel/"><img src="./icons/open-in-new.svg" class="project-icons"></a>
+                            <a href="https://mk-dlr.github.io/image-carousel/" target="_blank"><img src="./icons/open-in-new.svg" class="project-icons"></a>
                         </div>
                     </div>
                     <p class="project-desc">A simple image carousel with autoplay and click forward and backward functionality.</p>
