@@ -1,12 +1,15 @@
 /* styles.css */
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;300;400;500;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
 }
 
 body {
-    background-color: #0891B2;
+    background-color: #282A38;
+    font-family: 'Roboto Mono', monospace;
 }
 
 main {
@@ -50,7 +53,7 @@ h3 {
     left: 0;
     right: 0;
     height: 87%; 
-    background-color: #0891B2;
+    background-color: #282A38;
     z-index: -1;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -91,6 +94,7 @@ h3 {
     margin-bottom: 6vh;
     padding: 6vh 3.5vw 1.5vw 1.5vw;
     flex: 1;
+    color: #555555;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -127,10 +131,16 @@ h3 {
     padding-bottom: 2vh;
     margin-bottom: 2.5vh;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    color: #555555;
 }
 
 .project-image {
     max-width: inherit;
+    transition-duration: 0.4s;
+}
+
+.project-image:hover {
+    filter: brightness(50%);
 }
 
 .project-card-header {
@@ -138,6 +148,7 @@ h3 {
     align-items: center;
     justify-content: space-between; 
     padding-top: 1.5vh;
+    color: black;
 }
 
 .project-card-header, .project-desc {
@@ -200,6 +211,7 @@ address {
     height: 5vh;
     margin-top: 0.5vw;
     margin-right: 1.5vw;
+    filter: invert(73%) sepia(10%) saturate(1294%) hue-rotate(357deg) brightness(87%) contrast(84%);
 }
 
 .contact-image {
@@ -212,6 +224,10 @@ address {
     transition-duration: 0.4s;
 }
 
-.about-icons:hover, .project-icons:hover, .contact-icons:hover {
+.about-icons:hover, .project-icons:hover {
     filter: invert(73%) sepia(10%) saturate(1294%) hue-rotate(357deg) brightness(87%) contrast(84%);
+}
+
+.contact-icons:hover {
+    filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(246deg) brightness(105%) contrast(102%);
 }
